demo/30-tier/calico.log-access.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.log-nginx-ingress
spec:
  tier: security
  order: 100
  selector: "app == 'nginx'"
  types:
  - Ingress
  ingress:
  - action: Log
    protocol: TCP
    source:
      selector: "app == 'centos' || app == 'netshoot'"
    destination: {}
  - action: Pass
